# Azure-Sphere-with-Azure-RTOS-integration

./: README.md  REAL_TIME_AZURE_RTOS.md  build_azure_rtos_app.md  build_high_level_monitor.md
Hardware/avnet_mt3620_sk/: azure_sphere_learning_path.json
Hardware/avnet_mt3620_sk/inc/hw/: azure_sphere_learning_path.h
app_hl_monitor/: CMakeLists.txt  app_manifest.json  main.c
app_hl_monitor/learning_path_libs/: azure_iot.c  device_twins.c  device_twins.h  direct_methods.c  direct_methods.h  eventloop_timer_utilities.h  inter_core.h  peripheral_gpio.c  peripheral_gpio.h  timer.c  timer.h
app_hl_monitor/libs/: azure_iot.c  azure_iot.h  device_twins.c  device_twins.h  globals.h  inter_core.c  inter_core.h  peripheral.c  terminate.c  terminate.h
app_hl_monitor_expanded/: CMakeLists.txt  app_manifest.json  exit_codes.h  main.c
app_rt_azure_rtos/: CMakeLists.txt  app_manifest.json
app_rt_azure_rtos/demo_threadx/: demo_azure_rtos.c  lsm6dso_driver.c
